fixed bar not showing

--- a/IU_tabel_org/css/styles.css
+++ b/IU_tabel_org/css/styles.css
@@ -329,7 +329,7 @@
 #newTable.theme-dark th .day-name {
     color: #ffffff !important;
     text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
-    font-size: 1.8em;
+    font-size: 2.1em;
     font-weight: 500;
     letter-spacing: 0;
     text-align: center;
